--- a/new.html
+++ b/new.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Git Work flow 2</h1>
     <p>this is second method of using git and git hub</p>
+    <h2>Hello world</h2>
 </body>
 </html>
